--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Sacramento&family=Sen:wght@400;700;800&display=swap');
 
 root {
@@ -26,6 +25,7 @@ body {
 a {
     text-decoration: none;
 }
+
 .thin {
     font-weight: 300;
 }
@@ -43,7 +43,7 @@ a {
 }
 
 .main-bg {
-    background-color: #fff ;
+    background-color: #fff;
 }
 
 .scrollable {
@@ -64,17 +64,18 @@ a {
             NAVBAR 
 -----------------------------------------
 ---------------------------------------*/
-.navbar-nav .nav-link.active, 
+.navbar-nav .nav-link.active,
 .navbar-nav .show>.nav-link,
 .dropdown-toggle,
 .nav-link a,
 .nav-link-s a {
-    text-transform:uppercase;
+    text-transform: uppercase;
     font-family: 'Sen', sans-serif;
     font-weight: bold;
     font-weight: bold;
     color: #0E9A45;
 }
+
 .nav-s {
     padding: 1rem;
     display: flex;
@@ -85,7 +86,7 @@ a {
     margin-top: -10px;
 }
 
-.brand-logo {  
+.brand-logo {
     font-size: 2.3rem;
     font-weight: 700;
     color: #45575A;
@@ -101,8 +102,9 @@ a {
 .nav-link-drop {
     font-size: 80%;
 }
+
 .nav-item-s {
-    position:relative;
+    position: relative;
 }
 
 .navbar-expand-lg .navbar-nav .nav-link {
@@ -112,7 +114,7 @@ a {
 
 .active-nav {
     height: 3px;
-    background-color:#8EC63F;
+    background-color: #8EC63F;
     border-radius: 25px;
     position: absolute;
     left: 0;
@@ -155,7 +157,7 @@ a {
     left: 0;
     width: 100%;
     min-height: 130vh;
-    background: linear-gradient(to right, #fff, #8EC63F, #0E9A45 );
+    background: linear-gradient(to right, #fff, #8EC63F, #0E9A45);
 }
 
 .section-blank {
@@ -248,7 +250,7 @@ a {
     border-radius: 50%;
 }
 
-.hero-about-chef-title{
+.hero-about-chef-title {
     font-size: 130%;
     color: #45575A;
     margin-top: 20px;
@@ -271,7 +273,7 @@ a {
 }
 
 .carousel-inner img {
-    background-size: cover ;
+    background-size: cover;
     object-fit: cover;
     height: auto;
 }
@@ -286,7 +288,7 @@ a {
 
 
 .carousel-image-flash-author,
-.carousel-image-flash-category { 
+.carousel-image-flash-category {
     background-color: #0e9a46dd;
     border-radius: 4px;
     margin-top: 3px;
@@ -299,7 +301,7 @@ a {
 
 .carousel-image-comment {
     position: absolute;
-    max-width: 80% ;
+    max-width: 80%;
     height: 50%;
     bottom: 20%;
     right: 20px;
@@ -361,7 +363,7 @@ a {
 /*---------------------------------------
             Category Page Bttm
  ---------------------------------------*/
- .cat-card-img-bttm {
+.cat-card-img-bttm {
     height: 120px;
     width: 120px;
     border-radius: 50%;
@@ -438,10 +440,10 @@ img {
 }
 
 .image-flash-author,
-.image-flash-category { 
+.image-flash-category {
     background-color: #0E9A45;
     border-radius: 4px;
-  
+
     margin-top: 3px;
     padding: 0 5px;
 }
@@ -459,16 +461,26 @@ img {
 }
 
 .card-blog-title {
-    color:#45575A;
+    color: #45575A;
+    font-size: 150%;
+    text-transform: uppercase;
+    font-family: 'Sen', sans-serif;
+    font-weight: bold;
 }
 
 .card-featured-comment {
     margin-top: 20px;
-    color:#45575A;
+    color: #45575A;
+}
+
+.card-blog-comment {
+    font-size: 130%;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 100;
 }
 
 .card-featured-comment-continue {
-    color:#0E9A45;
+    color: #0E9A45;
     font-weight: 900;
     text-transform: uppercase;
     text-align: end;
@@ -478,13 +490,13 @@ img {
             Recipe List 
 ---------------------------------------*/
 .card-list-title {
-    color:#45575A;
+    color: #45575A;
     font-size: 120%;
 }
 
 .card-img-recipe {
-    max-height: 280px;
-    object-fit: cover ;
+    max-height: 264px;
+    object-fit: cover;
     align-self: center;
 }
 
@@ -547,22 +559,22 @@ img {
 
 .recipe-subtitle {
     margin-left: 5%;
-    color:#9A99A2;
+    color: #9A99A2;
 }
 
 .btn-signup {
-    background-color:#9A99A2;
+    background-color: #9A99A2;
     color: #fff;
 }
 
 .btn-signup:hover,
 .btn-signup:active {
     background-color: #fff;
-    color:#9A99A2;
+    color: #9A99A2;
 }
 
 .link {
-    color:#9A99A2;
+    color: #9A99A2;
     text-decoration: none;
 }
 
@@ -599,7 +611,7 @@ img {
     .headline h1 {
         font-size: 200%;
     }
-    
+
     .headline .brand-logo {
         font-size: 150%;
         margin-left: 100px;
@@ -641,7 +653,7 @@ img {
         z-index: 5;
     }
 
-    footer {    
+    footer {
         font-size: 50%;
     }
 
@@ -661,7 +673,7 @@ img {
     .headline h1 {
         font-size: 150%;
     }
-    
+
     .headline .brand-logo {
         font-size: 90%;
         margin-left: 50px;
