--- a/templates/recipe_detail.html
+++ b/templates/recipe_detail.html
@@ -146,21 +146,24 @@
     <div class="row">
         <div class="col-md-7 offset-1 card mb-4  mt-3 ">
             <h3>Comments:</h3>
+            <hr>
             <div class="card-body">
                 <!-- We want a for loop inside the tags to iterate through each comment in comments -->
                 {% for comment in comments %}
                 <div class="comments" style="padding: 10px;">
                     <p class="font-weight-bold">
                         <!-- The commenter's name goes here. Check the model if you're not sure what that is -->
-                        {{ comment.comment_title }}
-                        <span class=" text-muted font-weight-normal">
-                            <!-- The comment's created date goes here -->
-                            {{ comment.created_date }}
-                        </span> wrote:
+                        {{ comment.post_author }}
+                        <span class=" text-muted font-weight-normal">, on</span>
+                        <!-- The comment's created date goes here -->
+                        {{ comment.created_date }}
+                        <span class=" text-muted font-weight-normal">wrote:</span>
                     </p>
                     <!-- The body of the comment goes before the | -->
+                    {{ comment.comment_title | linebreaks }}
                     {{ comment.comment_body | linebreaks }}
                 </div>
+                <hr>
                 <!-- Our for loop ends here -->
                 {% endfor %}
             </div>
