--- a/templates/recipe_add.html
+++ b/templates/recipe_add.html
@@ -16,7 +16,7 @@
                 <h5>Your Recipe was Submitted Succesfully {{ user }}!</h5>
                 <br>
                 <br>
-                <a href="{% url 'recipes' %}" class="btn btn-outline-success">Home</a>
+                <a href="{% url 'recipes' %}" class="btn btn-outline-success"></a>
                 <a href="{% url 'recipe-mylist' %}" class="btn btn-outline-success">My Recipes</a>
             </center>
             
@@ -30,7 +30,7 @@
                 {{ form.as_p }}
 
                 <input type="submit" value="Add Recipe" class="btn btn-outline-warning">
-                <a href="{% url 'recipes' %}" class="btn btn-outline-success">Home</a>
+                <a href="{% url 'recipes' %}" class="btn btn-outline-success"></a>
             </form>
             <br>
             
