--- a/templates/recipe_detail.html
+++ b/templates/recipe_detail.html
@@ -153,7 +153,7 @@
                 <div class="comments" style="padding: 10px;">
                     <p class="font-weight-bold">
                         <!-- The commenter's name goes here. Check the model if you're not sure what that is -->
-                        {{ comment.post_author }}
+                        <strong>{{ comment.post_author }}</strong>
                         <span class=" text-muted font-weight-normal">, on</span>
                         <!-- The comment's created date goes here -->
                         {{ comment.created_date }}
