--- a/members/templates/registration/registration.html
+++ b/members/templates/registration/registration.html
@@ -10,12 +10,12 @@
         <div class="col-md-6 mt-3 offset-md-2">
             <h3>{% trans "Sign Up" %}</h3>
 
-            <p>{% blocktrans %}Welcome back to the Shemmylicious Food blog. <br><br> Do you already have an account? Then please <a
+            <p>{% blocktrans %}Welcome to the Shemmylicious Food blog. <br><br> Do you already have an account? Then please <a
                     class="link" href="{{ login_url }}">sign in</a> instead.{% endblocktrans %}</p>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-8 mt-3 offset-md-3">
+        <div class="col-md-6 mt-3 offset-md-2">
             <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
                 {% csrf_token %}
                 {{ form.as_p }}
