--- a/templates/base.html
+++ b/templates/base.html
@@ -84,6 +84,43 @@
             </div>
           </li>
         
+          <!-- TO BE REMOVED -->
+          <li class="nav-item nav-link-s dropdown">
+            <div class="nav-item-s">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">TBD</a>
+
+                <ul class="dropdown-menu">
+                  
+                  <li class="nav-item nav-link-s">
+                    <div class="nav-item-s">
+                      <a class="nav-link nav-link-drop" href="{% url 'add-category' %}">Add Category</a>
+                    </div>
+                  </li>
+    
+                  <li class="nav-item nav-link-s">
+                    <div class="nav-item-s">
+                        <a class="nav-link nav-link-drop" href="/admin"><i class="fa-solid fa-screwdriver-wrench fa-fade fa-xs"></i>  Admin</a>
+                    </div>
+                  </li>
+    
+                  <li class="nav-item nav-link-s">
+                    <div class="nav-item-s">
+                        <a class="nav-link nav-link-drop" href="{% url 'register' %}"><i class="fa-solid fa-screwdriver-wrench fa-fade fa-xs"></i>  Register</a>
+                    </div>
+                  </li>
+    
+                  <li class="nav-item nav-link-s">
+                    <div class="nav-item-s">
+                        <a class="nav-link nav-link-drop" href="{% url 'login' %}"><i class="fa-solid fa-screwdriver-wrench fa-fade fa-xs"></i>  Login</a>
+                    </div>
+                  </li>
+
+                </ul>
+
+            </div>
+          </li>
+
           <!-- Nav Links visible when User is authenticated -->
           {% if user.is_authenticated %}
 
@@ -108,21 +145,6 @@
                   </div>
                 </li>
 
-                <!-- TO BE REMOVED -->
-                <hr>
-                <li class="nav-item nav-link-s">
-                  <div class="nav-item-s">
-                    <a class="nav-link nav-link-drop" href="{% url 'add-category' %}">Add Category</a>
-                  </div>
-                </li>
-
-                <li class="nav-item nav-link-s">
-                  <div class="nav-item-s">
-                      <a class="nav-link nav-link-drop" href="/admin"><i class="fa-solid fa-screwdriver-wrench fa-fade fa-xs"></i>  Admin</a>
-                  </div>
-                </li>
-                <hr>
-
                 <!-- Visible for Admin only -->
                 {% if user.is_superuser %}
                 <hr>
@@ -137,6 +159,7 @@
                       <a class="nav-link nav-link-drop" href="/admin"><i class="fa-solid fa-screwdriver-wrench fa-fade fa-xs"></i>  Admin</a>
                   </div>
                 </li>
+                <hr>
 
                 {% endif %}
                           
