--- a/templates/recipe_list.html
+++ b/templates/recipe_list.html
@@ -24,9 +24,9 @@
         <div class="image-container">
           {% if "recipe" in recipe.featured_image.url %}
           <img src="https://res.cloudinary.com/dteyj4llb/image/upload/v1679649965/media/Shemmylicious/recipe.png"
-            alt="deafult image" class="img-thumbnail card-img-top ">
+            alt="deafult image" class="img-thumbnail card-img-top shadow">
           {% else %}
-          <img src="{{ recipe.featured_image.url }}" alt="image" class="img-thumbnail card-img-top">
+          <img src="{{ recipe.featured_image.url }}" alt="image" class="img-thumbnail card-img-top shadow">
           {% endif %}
           <div class="image-flash">
             <p class="author image-flash-author">Author: {{ recipe.author }}</p>
