--- a/templates/recipe_add_category.html
+++ b/templates/recipe_add_category.html
@@ -1,19 +1,21 @@
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
 {% load static %}
 
 {% block content %}
 
-    <div class="container">
-        <h2>{{ user.username }}'s Area</h2>
-        <br/><br/><br/>
-        <center>
+{% if user.is_authenticated %}
+
+<div class="container">
+    <h2>{{ user.username }}'s Area</h2>
+    <br /><br /><br />
+    <center>
         <br>
         <br>
         <h1>Add Category</h1>
         <br>
         <div class="container col-6">
             {% if submitted %}
-                Your Recipe was Submitted Succesfully!
+            Your Recipe was Submitted Succesfully!
             {% else %}
             <form action="" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
@@ -23,13 +25,20 @@
 
                 <input type="submit" value="Add Category" class="btn btn-outline-secondary">
             </form>
-            {% endif %} 
+            {% endif %}
         </div>
-        </center>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-    </div>
+    </center>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+</div>
+
+{% else %}
+<center>
+    <h1>You're not logged in!</h1>
+</center>
+{% endif %}
+
 {% endblock content %}
