--- a/templates/recipe_update.html
+++ b/templates/recipe_update.html
@@ -1,10 +1,10 @@
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
 {% block title %}Edit: {{ recipe.recipe_title }}{% endblock %}
 {% load static %}
 
-
-
 {% block content %}
+
+{% if user.is_authenticated %}
 
 <div class="container">
     <br>
@@ -14,24 +14,31 @@
     <br><br>
     <h4>Edit Recipe: {{ recipe.recipe_title }} </h4>
     <br>
-    <p>In Category: {{ recipe.category }}</p> 
-    <small>By: {{ recipe.author }}</small><br/>
-    <small>Created: {{ recipe.created_date }}, </small> 
+    <p>In Category: {{ recipe.category }}</p>
+    <small>By: {{ recipe.author }}</small><br />
+    <small>Created: {{ recipe.created_date }}, </small>
     <small>Last Updated: {{ recipe.updated_date }}, </small>
     <hr>
-    
+
     <br>
     <form action="" method="POST">
 
         {% csrf_token %}
         {{ form.as_p }}
-    
+
         <br>
         <a href="{% url 'recipe-mylist' %}" class="btn btn-sm btn-outline-success">Back</a>
         <a href="{% url 'recipes' %}" class="btn btn-sm btn-outline-success">Home</a>
-    <input type="submit" value="Update" class="btn btn-sm btn-outline-success">
+        <input type="submit" value="Update" class="btn btn-sm btn-outline-success">
 
     </form>
 
 </div>
+
+{% else %}
+<center>
+    <h1>You're not logged in!</h1>
+</center>
+{% endif %}
+
 {% endblock content %}
