--- a/templates/base.html
+++ b/templates/base.html
@@ -106,7 +106,7 @@
     
                   <li class="nav-item nav-link-s">
                     <div class="nav-item-s">
-                        <a class="nav-link nav-link-drop" href="{% url 'register' %}"><i class="fa-solid fa-screwdriver-wrench fa-fade fa-xs"></i>  Register</a>
+                        <a class="nav-link nav-link-drop" href="{% url 'register' %}"><i class="fa-solid fa-screwdriver-wrench fa-fade fa-xs"></i>  Sign Up</a>
                     </div>
                   </li>
     
@@ -132,6 +132,12 @@
               </a>
               
               <ul class="dropdown-menu">
+
+                <li class="nav-item nav-link-s">
+                  <div class="nav-item-s">
+                    <a class="nav-link nav-link-drop" href="{% url 'edit-profile' %}"> {{ user }} Profile </a>
+                  </div>
+                </li>
 
                 <li class="nav-item nav-link-s">
                   <div class="nav-item-s">
