created login and logout views and urls

--- a/members/templates/registration/edit_profile.html
+++ b/members/templates/registration/edit_profile.html
@@ -9,7 +9,7 @@
         <div class="col-md-6 mt-3 offset-md-2">
             <h3>Edit {{ user }}'s Profile</h3>
 
-            <p>here's were you can...</p>
+            <p>here's were you can edit your Profile</p>
         </div>
     </div>
     <div class="row">
@@ -18,7 +18,7 @@
                 {% csrf_token %}
                 {{ form.as_p }}
                 
-                <button class="btn btn-outline-success right" type="submit">Update</button>
+                <button class="btn btn-outline-success right" type="submit">Update Profile</button>
             </form>
         </div>
     </div>
