--- a/members/templates/registration/password_change.html
+++ b/members/templates/registration/password_change.html
@@ -1,16 +1,25 @@
-{% extends "account/base.html" %}
-
-{% load i18n %}
-
-{% block head_title %}{% trans "Change Password" %}{% endblock %}
-
+{% extends "base.html" %}
+{% block title %}Change Password{% endblock %}
 {% block content %}
-    <h1>{% trans "Change Password" %}</h1>
 
-    <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
-        <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-    </form>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 mt-3 offset-md-2">
+            <h3>{{ user }}'s Password Change</h3>
+
+            <p>Here's were you can change your password</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6 mt-3 offset-md-2">
+            <form class="form-group">
+                {% csrf_token %}
+                {{ form.as_p }}
+                
+                <button class="btn btn-outline-success right" type="submit">Update Password</button>
+            </form>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
