--- a/templates/base.html
+++ b/templates/base.html
@@ -116,6 +116,12 @@
                     </div>
                   </li>
 
+                  <li class="nav-item nav-link-s">
+                    <div class="nav-item-s">
+                        <a class="nav-link nav-link-drop" href="{% url 'edit-profile' %}"><i class="fa-solid fa-screwdriver-wrench fa-fade fa-xs"></i>  Update</a>
+                    </div>
+                  </li>
+
                 </ul>
 
             </div>
