--- a/members/templates/registration/edit_profile.html
+++ b/members/templates/registration/edit_profile.html
@@ -17,8 +17,10 @@
             <form class="form-group">
                 {% csrf_token %}
                 {{ form.as_p }}
-                
-                <button class="btn btn-outline-success right" type="submit">Update Profile</button>
+                <br>
+                <div class="d-grid col-6">
+                    <button class="btn btn-outline-success" type="submit">Update Profile</button>
+                </div>
             </form>
         </div>
     </div>
