--- a/members/templates/registration/login.html
+++ b/members/templates/registration/login.html
@@ -1,31 +1,30 @@
 {% extends "base.html" %}
 
-{% load i18n %}
-{% load account socialaccount %}
-
-{% block head_title %}{% trans "Sign In" %}{% endblock %}
+{% block title %}Login{% endblock %}
 
 {% block content %}
 
 <div class="container">
     <div class="row">
         <div class="col-md-6 mt-3 offset-md-2">
-            <h3>{% trans "Sign In" %}</h3>
+            <h3>Log in</h3>
 
-            <p>{% blocktrans %}Welcome back to the Shemmylicious Food blog. <br><br> To leave a comment, add or like a recipe, please log in. If
-                you have not created an account yet, then <a class="link" href="{{ signup_url }}">sign up</a>
-                first.{% endblocktrans %}</p>
+            <p>Welcome to the Shemmylicious Food blog. <br><br> To leave a comment, add or like a recipe, please log in.<br>If
+                you have not created an account yet, then <a class="link" href="{% url 'register' %}">sign up</a>
+                first.</p>
         </div>
     </div>
     <div class="row">
         <div class="col-md-8 mt-3 offset-md-3">
-            <form class="login" method="POST" action="{% url 'account_login' %}">
+            <form class="login" method="POST" action="{% url 'login-user' %}">
                 {% csrf_token %}
                 {{ form.as_p }}
-                {% if redirect_field_value %}
-                <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-                {% endif %}
-                <button class="btn btn-signup right" type="submit">{% trans "Sign In" %}</button>
+ 
+                <br>
+                <div class="d-grid col-6">
+                    <button class="btn btn-outline-success" type="submit">Sign In</button>
+                </div>
+                
             </form>
         </div>
     </div>
