--- a/members/templates/registration/registration.html
+++ b/members/templates/registration/registration.html
@@ -1,28 +1,29 @@
 {% extends "base.html" %}
 
-{% load i18n %}
-
-{% block head_title %}{% trans "Signup" %}{% endblock %}
+{% block title %}Sign up{% endblock %}
 
 {% block content %}
 <div class="container">
     <div class="row">
         <div class="col-md-6 mt-3 offset-md-2">
-            <h3>{% trans "Sign Up" %}</h3>
+            <h3>Sign Up</h3>
 
-            <p>{% blocktrans %}Welcome to the Shemmylicious Food blog. <br><br> Do you already have an account? Then please <a
-                    class="link" href="{{ login_url }}">sign in</a> instead.{% endblocktrans %}</p>
+            <p>Welcome to the Shemmylicious Food blog. <br><br> Do you already have an account? Then please <a
+                    class="link" href="{% url 'login-user' %}">sign in</a> instead.</p>
         </div>
     </div>
     <div class="row">
         <div class="col-md-6 mt-3 offset-md-2">
-            <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+            <form class="signup" id="signup_form" method="post" action="{% url 'register' %}">
                 {% csrf_token %}
                 {{ form.as_p }}
                 {% if redirect_field_value %}
                 <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                 {% endif %}
-                <button class="btn btn-signup right" type="submit">{% trans "Sign Up" %} &raquo;</button>
+
+                <div class="d-grid col-6">
+                    <button class="btn btn-outline-success"type="submit">Sign Up</button>
+                </div>
             </form>
         </div>
     </div>
