updated Profile model

--- a/members/templates/registration/edit_profile.html
+++ b/members/templates/registration/edit_profile.html
@@ -9,7 +9,7 @@
         <div class="col-md-6 mt-3 offset-md-2">
             <h3>Edit {{ user }}'s Profile</h3>
 
-            <p>here's were you can edit your Profile</p>
+            <p>{{ user.profile.bio }}</p>
         </div>
     </div>
     <div class="row">
