--- a/templates/recipe_list_by_category.html
+++ b/templates/recipe_list_by_category.html
@@ -15,7 +15,7 @@
       <div class="col-lg-4 col-12">
         <div class="image-container">
           {% if "recipe" in recipe.featured_image.url %}
-          <img src="https://res.cloudinary.com/dteyj4llb/image/upload/v1679649965/media/Shemmylicious/recipe.png"
+          <img src="https://res.cloudinary.com/dteyj4llb/image/upload/v1681299689/media/Shemmylicious/img3_oclnvl.jpg"
             alt="deafult image" class="img-thumbnail card-img-top ">
           {% else %}
           <img src="{{ recipe.featured_image.url }}" alt="image" class="img-thumbnail card-img-top">
