--- a/templates/recipe_add.html
+++ b/templates/recipe_add.html
@@ -1,43 +1,52 @@
 {% extends 'base.html' %}
 {% block title %}Add Recipe{% endblock %}
 {% load static %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 
 {% if user.is_authenticated %}
 
 <div class="container">
-
-    <h2>{{ user.username }}'s Area</h2>
     <br>
-    <div class="container col-6">
         {% if submitted %}
         <center>
             <br>
             <br>
-            <h5>Your Recipe was Submitted Succesfully {{ user }}!</h5>
+            <h5>Your Recipe was Submitted Succesfully, {{ user }}!</h5>
             <br>
             <br>
-            <a href="{% url 'recipes' %}" class="btn btn-outline-success"></a>
+            <a href="{% url 'recipes' %}" class="btn btn-outline-success">Back</a>
             <a href="{% url 'recipe-mylist' %}" class="btn btn-outline-success">My Recipes</a>
         </center>
 
         {% else %}
-        <br /><br /><br />
+        <br>
+        <br>
+        <br>
         <h1>Add Recipe</h1>
+        <br>
         <form action="" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             {{ form.media }}
 
-            {{ form.as_p }}
-
-            <input type="submit" value="Add Recipe" class="btn btn-outline-warning">
-            <a href="{% url 'recipes' %}" class="btn btn-outline-success"></a>
+            {{ form | crispy }}
+            <br>
+            <center>
+                <div class="d-grid gap-2 col-12">
+                    <input type="submit" value="Add Recipe" class="btn btn-outline-success">
+                    <a href="{% url 'recipes' %}" class="btn btn-outline-success">Back</a>
+                </div>
+            </center>
         </form>
         <br>
 
         {% endif %}
-    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 </div>
 
 {% else %}
