--- a/templates/recipe_list.html
+++ b/templates/recipe_list.html
@@ -36,7 +36,7 @@
       </div>
       <div class="col-lg-8 col-12">
         <div class="card-body">
-          <a href="{% url 'recipe_detail' recipe.slug %}">
+          <a href="{% url 'recipe-blog' recipe.slug %}">
             <h1 class="card-title card-blog-title">"{{ recipe.recipe_title }}"</h1>
           </a>
           <hr>
@@ -44,7 +44,7 @@
           <hr>
           <p class="card-featured-comment">Featured Comment</p>
           <h3 class="card-title card-blog-comment">{{ recipe.featured_comment }}</h5>
-            <a href="{% url 'recipe_detail' recipe.slug %}">
+            <a href="{% url 'recipe-blog' recipe.slug %}">
               <p class="card-featured-comment-continue">Continue reading...</p>
             </a>
             <br>
