added links to the bttm of the blog and recipe pages

--- a/templates/recipe_detail.html
+++ b/templates/recipe_detail.html
@@ -199,6 +199,9 @@
             </div>
         </div>
     </div>
+    <div class="gap-2">
+        <a href="{% url 'recipes' %}" class="btn btn-outline-success">Back to Recipes</a>
+    </div>
 </div>
 
 {% endblock content %}
