--- a/templates/recipe_blog.html
+++ b/templates/recipe_blog.html
@@ -138,6 +138,11 @@
             </div>
         </div>
     </div>
+    <div class="gap-2">
+        <a href="{% url 'blog' %}" class="btn btn-outline-success">Back to Blog</a>
+        <a href="{% url 'recipes' %}" class="btn btn-outline-success">Back to Recipes</a>
+    </div>
 </div>
+
 
 {% endblock content %}
