linekd user profile urls, bio and pic

--- a/members/templates/registration/edit_profile.html
+++ b/members/templates/registration/edit_profile.html
@@ -6,10 +6,62 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-md-6 mt-3 offset-md-2">
-            <h3>Edit {{ user }}'s Profile</h3>
-
-            <p>{{ user.profile.bio }}</p>
+        <div class="col-md-11 offset-md-1">
+            <!-- The Profile image URL and Bio goes in the src attribute -->
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row no-gutters">
+                    <div class="col-md-4">
+                        {% if "profile_img" in user.profile.profile_pic.url %}
+                        <img src="https://res.cloudinary.com/dteyj4llb/image/upload/v1681317396/profile_img.png"
+                            width="100%" class="rounded-circle">
+                        {% else %}
+                        <img src="{{ post.featured_image.url }}" width="100%">
+                        <br>
+                        {% endif %}
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h3 class="card-title">{{ user }}'s Profile</h3>
+                            <p class="card-text">{{ user.profile.bio }}</p>
+                            {% if user.profile.website_url %}
+                            <a class="card-text" href="{{ user.profile.website_url }}">
+                                <small>
+                                    <i class="fa-solid fa-globe"></i>
+                                    {{ user.profile.website_url }}
+                                </small></a><br>
+                            {% endif %}
+                            {% if user.profile.facebook_url %}
+                            <a class="card-text" href="{{ user.profile.facebook_url }}">
+                                <small>
+                                    <i class="fa-brands fa-facebook"></i>
+                                    {{ user.profile.facebook_url }}
+                                </small></a><br>
+                            {% endif %}
+                            {% if user.profile.twitter_url %}
+                            <a class="card-text" href="{{ user.profile.twitter_url }}">
+                                <small>
+                                    <i class="fa-brands fa-twitter"></i>
+                                    {{ user.profile.twitter_url }}
+                                </small></a><br>
+                            {% endif %}
+                            {% if user.profile.instagram_url %}
+                            <a class="card-text" href="{{ user.profile.instagram_url }}">
+                                <small>
+                                    <i class="fa-brands fa-instagram"></i>
+                                    {{ user.profile.instagram_url }}
+                                </small></a><br>
+                            {% endif %}
+                            {% if user.profile.pintrest_url %}
+                            <a class="card-text" href="{{ user.profile.pintrest_url }}">
+                                <small>
+                                    <i class="fa-brands fa-pinterest"></i>
+                                    {{ user.profile.pintrest_url }}
+                                </small></a><br>
+                            {% endif %}
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="row">
