--- a/members/templates/registration/edit_profile.html
+++ b/members/templates/registration/edit_profile.html
@@ -15,14 +15,17 @@
                         <img src="https://res.cloudinary.com/dteyj4llb/image/upload/v1681317396/profile_img.png"
                             width="100%" class="rounded-circle">
                         {% else %}
-                        <img src="{{ post.featured_image.url }}" width="100%">
+                        <img src="{{ user.profile.profile_pic.url }}"
+                            width="100%" class="rounded-circle">
                         <br>
                         {% endif %}
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
                             <h3 class="card-title">{{ user }}'s Profile</h3>
+                            {% if user.profile.bio %}
                             <p class="card-text">{{ user.profile.bio }}</p>
+                            {% endif %}
                             {% if user.profile.website_url %}
                             <a class="card-text" href="{{ user.profile.website_url }}">
                                 <small>
@@ -65,12 +68,12 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-6 mt-3 offset-md-2">
+        <div class="col-md-8 mt-3 offset-md-2">
             <form class="form-group">
                 {% csrf_token %}
                 {{ form.as_p }}
                 <br>
-                <div class="d-grid col-6">
+                <div class="d-grid">
                     <button class="btn btn-outline-success" type="submit">Update Profile</button>
                 </div>
             </form>
